// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when generating ods and comparing it to data standard 2.0 authoritative artifacts should have correct foreign key order 1`] = `
Array [
  "FK_AcademicSubjectDescriptor_AcademicSubjectType",
  "FK_AcademicSubjectDescriptor_Descriptor",
  "FK_AcademicWeek_CalendarDate",
  "FK_AcademicWeek_CalendarDate1",
  "FK_AcademicWeek_School",
  "FK_AccommodationDescriptor_AccommodationType",
  "FK_AccommodationDescriptor_Descriptor",
  "FK_Account_EducationOrganization",
  "FK_AccountabilityRating_EducationOrganization",
  "FK_AccountabilityRating_SchoolYearType",
  "FK_AccountCode_Account",
  "FK_AccountCode_AccountCodeDescriptor",
  "FK_AccountCodeDescriptor_Descriptor",
  "FK_AchievementCategoryDescriptor_AchievementCategoryType",
  "FK_AchievementCategoryDescriptor_Descriptor",
  "FK_Actual_Account",
  "FK_AdministrativeFundingControlDescriptor_AdministrativeFundingControlType",
  "FK_AdministrativeFundingControlDescriptor_Descriptor",
  "FK_Assessment_AcademicSubjectDescriptor",
  "FK_Assessment_AssessmentCategoryDescriptor",
  "FK_Assessment_AssessmentFamily",
  "FK_Assessment_AssessmentPeriodDescriptor",
  "FK_Assessment_GradeLevelDescriptor",
  "FK_Assessment_GradeLevelDescriptor1",
  "FK_AssessmentCategoryDescriptor_AssessmentCategoryType",
  "FK_AssessmentCategoryDescriptor_Descriptor",
  "FK_AssessmentContentStandard_Assessment",
  "FK_AssessmentContentStandard_EducationOrganization",
  "FK_AssessmentContentStandard_PublicationStatusType",
  "FK_AssessmentContentStandardAuthor_AssessmentContentStandard",
  "FK_AssessmentFamily_AcademicSubjectDescriptor",
  "FK_AssessmentFamily_AssessmentCategoryDescriptor",
  "FK_AssessmentFamily_AssessmentFamily",
  "FK_AssessmentFamily_GradeLevelDescriptor",
  "FK_AssessmentFamily_GradeLevelDescriptor1",
  "FK_AssessmentFamilyAssessmentPeriod_AssessmentFamily",
  "FK_AssessmentFamilyAssessmentPeriod_AssessmentPeriodDescriptor",
  "FK_AssessmentFamilyContentStandard_AssessmentFamily",
  "FK_AssessmentFamilyContentStandard_EducationOrganization",
  "FK_AssessmentFamilyContentStandard_PublicationStatusType",
  "FK_AssessmentFamilyContentStandardAuthor_AssessmentFamilyContentStandard",
  "FK_AssessmentFamilyIdentificationCode_AssessmentFamily",
  "FK_AssessmentFamilyIdentificationCode_AssessmentIdentificationSystemDescriptor",
  "FK_AssessmentFamilyLanguage_AssessmentFamily",
  "FK_AssessmentFamilyLanguage_LanguageDescriptor",
  "FK_AssessmentIdentificationCode_Assessment",
  "FK_AssessmentIdentificationCode_AssessmentIdentificationSystemDescriptor",
  "FK_AssessmentIdentificationSystemDescriptor_AssessmentIdentificationSystemType",
  "FK_AssessmentIdentificationSystemDescriptor_Descriptor",
  "FK_AssessmentItem_Assessment",
  "FK_AssessmentItem_AssessmentItemCategoryType",
  "FK_AssessmentItemLearningStandard_AssessmentItem",
  "FK_AssessmentItemLearningStandard_LearningStandard",
  "FK_AssessmentLanguage_Assessment",
  "FK_AssessmentLanguage_LanguageDescriptor",
  "FK_AssessmentPerformanceLevel_Assessment",
  "FK_AssessmentPerformanceLevel_AssessmentReportingMethodType",
  "FK_AssessmentPerformanceLevel_PerformanceLevelDescriptor",
  "FK_AssessmentPerformanceLevel_ResultDatatypeType",
  "FK_AssessmentPeriodDescriptor_Descriptor",
  "FK_AssessmentProgram_Assessment",
  "FK_AssessmentProgram_Program",
  "FK_AssessmentScore_Assessment",
  "FK_AssessmentScore_AssessmentReportingMethodType",
  "FK_AssessmentScore_ResultDatatypeType",
  "FK_AssessmentSection_Assessment",
  "FK_AssessmentSection_Section",
  "FK_AttendanceEventCategoryDescriptor_AttendanceEventCategoryType",
  "FK_AttendanceEventCategoryDescriptor_Descriptor",
  "FK_BehaviorDescriptor_BehaviorType",
  "FK_BehaviorDescriptor_Descriptor",
  "FK_BellSchedule_CalendarDate",
  "FK_BellSchedule_GradeLevelDescriptor",
  "FK_BellScheduleMeetingTime_BellSchedule",
  "FK_BellScheduleMeetingTime_ClassPeriod",
  "FK_Budget_Account",
  "FK_CalendarDate_School",
  "FK_CalendarDateCalendarEvent_CalendarDate",
  "FK_CalendarDateCalendarEvent_CalendarEventDescriptor",
  "FK_CalendarEventDescriptor_CalendarEventType",
  "FK_CalendarEventDescriptor_Descriptor",
  "FK_ClassPeriod_School",
  "FK_ClassroomPositionDescriptor_ClassroomPositionType",
  "FK_ClassroomPositionDescriptor_Descriptor",
  "FK_Cohort_AcademicSubjectDescriptor",
  "FK_Cohort_CohortScopeType",
  "FK_Cohort_CohortType",
  "FK_Cohort_EducationOrganization",
  "FK_CohortProgram_Cohort",
  "FK_CohortProgram_Program",
  "FK_CompetencyLevelDescriptor_Descriptor",
  "FK_CompetencyLevelDescriptor_PerformanceBaseConversionType",
  "FK_CompetencyObjective_EducationOrganization",
  "FK_CompetencyObjective_GradeLevelDescriptor",
  "FK_ContinuationOfServicesReasonDescriptor_ContinuationOfServicesReasonType",
  "FK_ContinuationOfServicesReasonDescriptor_Descriptor",
  "FK_ContractedStaff_Account",
  "FK_ContractedStaff_Staff",
  "FK_CountryDescriptor_Descriptor",
  "FK_Course_AcademicSubjectDescriptor",
  "FK_Course_CareerPathwayType",
  "FK_Course_CourseDefinedByType",
  "FK_Course_CourseGPAApplicabilityType",
  "FK_Course_CreditType",
  "FK_Course_CreditType1",
  "FK_Course_EducationOrganization",
  "FK_CourseCompetencyLevel_CompetencyLevelDescriptor",
  "FK_CourseCompetencyLevel_Course",
  "FK_CourseIdentificationCode_Course",
  "FK_CourseIdentificationCode_CourseIdentificationSystemDescriptor",
  "FK_CourseIdentificationSystemDescriptor_CourseIdentificationSystemType",
  "FK_CourseIdentificationSystemDescriptor_Descriptor",
  "FK_CourseLearningObjective_Course",
  "FK_CourseLearningObjective_LearningObjective",
  "FK_CourseLearningStandard_Course",
  "FK_CourseLearningStandard_LearningStandard",
  "FK_CourseLevelCharacteristic_Course",
  "FK_CourseLevelCharacteristic_CourseLevelCharacteristicType",
  "FK_CourseOfferedGradeLevel_Course",
  "FK_CourseOfferedGradeLevel_GradeLevelDescriptor",
  "FK_CourseOffering_Course",
  "FK_CourseOffering_School",
  "FK_CourseOffering_Session",
  "FK_CourseOfferingCurriculumUsed_CourseOffering",
  "FK_CourseOfferingCurriculumUsed_CurriculumUsedType",
  "FK_CourseTranscript_Course",
  "FK_CourseTranscript_CourseAttemptResultType",
  "FK_CourseTranscript_CourseRepeatCodeType",
  "FK_CourseTranscript_CreditType",
  "FK_CourseTranscript_CreditType1",
  "FK_CourseTranscript_GradeLevelDescriptor",
  "FK_CourseTranscript_MethodCreditEarnedType",
  "FK_CourseTranscript_School",
  "FK_CourseTranscript_StudentAcademicRecord",
  "FK_CourseTranscriptEarnedAdditionalCredits_AdditionalCreditType",
  "FK_CourseTranscriptEarnedAdditionalCredits_CourseTranscript",
  "FK_CredentialFieldDescriptor_AcademicSubjectDescriptor",
  "FK_CredentialFieldDescriptor_Descriptor",
  "FK_DiagnosisDescriptor_Descriptor",
  "FK_DiagnosisDescriptor_DiagnosisType",
  "FK_DisabilityDescriptor_Descriptor",
  "FK_DisabilityDescriptor_DisabilityCategoryType",
  "FK_DisabilityDescriptor_DisabilityType",
  "FK_DisciplineAction_DisciplineActionLengthDifferenceReasonType",
  "FK_DisciplineAction_School",
  "FK_DisciplineAction_School1",
  "FK_DisciplineAction_Student",
  "FK_DisciplineActionDiscipline_DisciplineAction",
  "FK_DisciplineActionDiscipline_DisciplineDescriptor",
  "FK_DisciplineActionDisciplineIncident_DisciplineAction",
  "FK_DisciplineActionDisciplineIncident_DisciplineIncident",
  "FK_DisciplineActionStaff_DisciplineAction",
  "FK_DisciplineActionStaff_Staff",
  "FK_DisciplineDescriptor_Descriptor",
  "FK_DisciplineDescriptor_DisciplineType",
  "FK_DisciplineIncident_IncidentLocationType",
  "FK_DisciplineIncident_ReporterDescriptionDescriptor",
  "FK_DisciplineIncident_School",
  "FK_DisciplineIncident_Staff",
  "FK_DisciplineIncidentBehavior_BehaviorDescriptor",
  "FK_DisciplineIncidentBehavior_DisciplineIncident",
  "FK_DisciplineIncidentWeapon_DisciplineIncident",
  "FK_DisciplineIncidentWeapon_WeaponDescriptor",
  "FK_EducationContent_ContentClassType",
  "FK_EducationContent_CostRateType",
  "FK_EducationContent_InteractivityStyleType",
  "FK_EducationContent_LearningStandard",
  "FK_EducationContentAppropriateGradeLevel_EducationContent",
  "FK_EducationContentAppropriateGradeLevel_GradeLevelDescriptor",
  "FK_EducationContentAppropriateSex_EducationContent",
  "FK_EducationContentAppropriateSex_SexType",
  "FK_EducationContentAuthor_EducationContent",
  "FK_EducationContentDerivativeSourceEducationContent_EducationContent",
  "FK_EducationContentDerivativeSourceEducationContent_EducationContent1",
  "FK_EducationContentDerivativeSourceLearningResourceMetadataURI_EducationContent",
  "FK_EducationContentDerivativeSourceURI_EducationContent",
  "FK_EducationContentLanguage_EducationContent",
  "FK_EducationContentLanguage_LanguageDescriptor",
  "FK_EducationOrganization_OperationalStatusType",
  "FK_EducationOrganizationAddress_AddressType",
  "FK_EducationOrganizationAddress_EducationOrganization",
  "FK_EducationOrganizationAddress_StateAbbreviationType",
  "FK_EducationOrganizationCategory_EducationOrganization",
  "FK_EducationOrganizationCategory_EducationOrganizationCategoryType",
  "FK_EducationOrganizationIdentificationCode_EducationOrganization",
  "FK_EducationOrganizationIdentificationCode_EducationOrganizationIdentificationSystemDescriptor",
  "FK_EducationOrganizationIdentificationSystemDescriptor_Descriptor",
  "FK_EducationOrganizationIdentificationSystemDescriptor_EducationOrganizationIdentificationSystemType",
  "FK_EducationOrganizationInstitutionTelephone_EducationOrganization",
  "FK_EducationOrganizationInstitutionTelephone_InstitutionTelephoneNumberType",
  "FK_EducationOrganizationInternationalAddress_AddressType",
  "FK_EducationOrganizationInternationalAddress_CountryDescriptor",
  "FK_EducationOrganizationInternationalAddress_EducationOrganization",
  "FK_EducationOrganizationInterventionPrescriptionAssociation_EducationOrganization",
  "FK_EducationOrganizationInterventionPrescriptionAssociation_InterventionPrescription",
  "FK_EducationOrganizationNetwork_EducationOrganization",
  "FK_EducationOrganizationNetwork_NetworkPurposeType",
  "FK_EducationOrganizationNetworkAssociation_EducationOrganization",
  "FK_EducationOrganizationNetworkAssociation_EducationOrganizationNetwork",
  "FK_EducationOrganizationPeerAssociation_EducationOrganization",
  "FK_EducationOrganizationPeerAssociation_EducationOrganization1",
  "FK_EducationServiceCenter_EducationOrganization",
  "FK_EducationServiceCenter_StateEducationAgency",
  "FK_EmploymentStatusDescriptor_Descriptor",
  "FK_EmploymentStatusDescriptor_EmploymentStatusType",
  "FK_EntryTypeDescriptor_Descriptor",
  "FK_EntryTypeDescriptor_EntryType",
  "FK_ExitWithdrawTypeDescriptor_Descriptor",
  "FK_ExitWithdrawTypeDescriptor_ExitWithdrawType",
  "FK_FeederSchoolAssociation_School",
  "FK_FeederSchoolAssociation_School1",
  "FK_Grade_GradeType",
  "FK_Grade_GradingPeriod",
  "FK_Grade_PerformanceBaseConversionType",
  "FK_Grade_StudentSectionAssociation",
  "FK_GradebookEntry_GradebookEntryType",
  "FK_GradebookEntry_GradingPeriod",
  "FK_GradebookEntry_Section",
  "FK_GradebookEntryLearningObjective_GradebookEntry",
  "FK_GradebookEntryLearningObjective_LearningObjective",
  "FK_GradebookEntryLearningStandard_GradebookEntry",
  "FK_GradebookEntryLearningStandard_LearningStandard",
  "FK_GradeLevelDescriptor_Descriptor",
  "FK_GradeLevelDescriptor_GradeLevelType",
  "FK_GradingPeriod_GradingPeriodDescriptor",
  "FK_GradingPeriod_School",
  "FK_GradingPeriodDescriptor_Descriptor",
  "FK_GradingPeriodDescriptor_GradingPeriodType",
  "FK_GraduationPlan_CreditType",
  "FK_GraduationPlan_EducationOrganization",
  "FK_GraduationPlan_GraduationPlanTypeDescriptor",
  "FK_GraduationPlan_SchoolYearType",
  "FK_GraduationPlanCreditsByCourse_CreditType",
  "FK_GraduationPlanCreditsByCourse_GradeLevelDescriptor",
  "FK_GraduationPlanCreditsByCourse_GraduationPlan",
  "FK_GraduationPlanCreditsByCourseCourse_Course",
  "FK_GraduationPlanCreditsByCourseCourse_GraduationPlanCreditsByCourse",
  "FK_GraduationPlanCreditsBySubject_AcademicSubjectDescriptor",
  "FK_GraduationPlanCreditsBySubject_CreditType",
  "FK_GraduationPlanCreditsBySubject_GraduationPlan",
  "FK_GraduationPlanRequiredAssessment_Assessment",
  "FK_GraduationPlanRequiredAssessment_GraduationPlan",
  "FK_GraduationPlanRequiredAssessmentAssessmentPerformanceLevel_AssessmentReportingMethodType",
  "FK_GraduationPlanRequiredAssessmentAssessmentPerformanceLevel_GraduationPlanRequiredAssessment",
  "FK_GraduationPlanRequiredAssessmentAssessmentPerformanceLevel_PerformanceLevelDescriptor",
  "FK_GraduationPlanRequiredAssessmentAssessmentPerformanceLevel_ResultDatatypeType",
  "FK_GraduationPlanRequiredAssessmentScore_AssessmentReportingMethodType",
  "FK_GraduationPlanRequiredAssessmentScore_GraduationPlanRequiredAssessment",
  "FK_GraduationPlanRequiredAssessmentScore_ResultDatatypeType",
  "FK_GraduationPlanTypeDescriptor_Descriptor",
  "FK_GraduationPlanTypeDescriptor_GraduationPlanType",
  "FK_Intervention_DeliveryMethodType",
  "FK_Intervention_EducationOrganization",
  "FK_Intervention_InterventionClassType",
  "FK_InterventionAppropriateGradeLevel_GradeLevelDescriptor",
  "FK_InterventionAppropriateGradeLevel_Intervention",
  "FK_InterventionAppropriateSex_Intervention",
  "FK_InterventionAppropriateSex_SexType",
  "FK_InterventionDiagnosis_DiagnosisDescriptor",
  "FK_InterventionDiagnosis_Intervention",
  "FK_InterventionEducationContent_EducationContent",
  "FK_InterventionEducationContent_Intervention",
  "FK_InterventionInterventionPrescription_Intervention",
  "FK_InterventionInterventionPrescription_InterventionPrescription",
  "FK_InterventionLearningResourceMetadataURI_Intervention",
  "FK_InterventionMeetingTime_ClassPeriod",
  "FK_InterventionMeetingTime_Intervention",
  "FK_InterventionPopulationServed_Intervention",
  "FK_InterventionPopulationServed_PopulationServedType",
  "FK_InterventionPrescription_DeliveryMethodType",
  "FK_InterventionPrescription_EducationOrganization",
  "FK_InterventionPrescription_InterventionClassType",
  "FK_InterventionPrescriptionAppropriateGradeLevel_GradeLevelDescriptor",
  "FK_InterventionPrescriptionAppropriateGradeLevel_InterventionPrescription",
  "FK_InterventionPrescriptionAppropriateSex_InterventionPrescription",
  "FK_InterventionPrescriptionAppropriateSex_SexType",
  "FK_InterventionPrescriptionDiagnosis_DiagnosisDescriptor",
  "FK_InterventionPrescriptionDiagnosis_InterventionPrescription",
  "FK_InterventionPrescriptionEducationContent_EducationContent",
  "FK_InterventionPrescriptionEducationContent_InterventionPrescription",
  "FK_InterventionPrescriptionLearningResourceMetadataURI_InterventionPrescription",
  "FK_InterventionPrescriptionPopulationServed_InterventionPrescription",
  "FK_InterventionPrescriptionPopulationServed_PopulationServedType",
  "FK_InterventionPrescriptionURI_InterventionPrescription",
  "FK_InterventionStaff_Intervention",
  "FK_InterventionStaff_Staff",
  "FK_InterventionStudy_DeliveryMethodType",
  "FK_InterventionStudy_EducationOrganization",
  "FK_InterventionStudy_InterventionClassType",
  "FK_InterventionStudy_InterventionPrescription",
  "FK_InterventionStudyAppropriateGradeLevel_GradeLevelDescriptor",
  "FK_InterventionStudyAppropriateGradeLevel_InterventionStudy",
  "FK_InterventionStudyAppropriateSex_InterventionStudy",
  "FK_InterventionStudyAppropriateSex_SexType",
  "FK_InterventionStudyEducationContent_EducationContent",
  "FK_InterventionStudyEducationContent_InterventionStudy",
  "FK_InterventionStudyInterventionEffectiveness_DiagnosisDescriptor",
  "FK_InterventionStudyInterventionEffectiveness_GradeLevelDescriptor",
  "FK_InterventionStudyInterventionEffectiveness_InterventionEffectivenessRatingType",
  "FK_InterventionStudyInterventionEffectiveness_InterventionStudy",
  "FK_InterventionStudyInterventionEffectiveness_PopulationServedType",
  "FK_InterventionStudyLearningResourceMetadataURI_InterventionStudy",
  "FK_InterventionStudyPopulationServed_InterventionStudy",
  "FK_InterventionStudyPopulationServed_PopulationServedType",
  "FK_InterventionStudyStateAbbreviation_InterventionStudy",
  "FK_InterventionStudyStateAbbreviation_StateAbbreviationType",
  "FK_InterventionStudyURI_InterventionStudy",
  "FK_InterventionURI_Intervention",
  "FK_LanguageDescriptor_Descriptor",
  "FK_LanguageDescriptor_LanguageType",
  "FK_LearningObjective_AcademicSubjectDescriptor",
  "FK_LearningObjective_GradeLevelDescriptor",
  "FK_LearningObjective_LearningObjective",
  "FK_LearningObjectiveContentStandard_EducationOrganization",
  "FK_LearningObjectiveContentStandard_LearningObjective",
  "FK_LearningObjectiveContentStandard_PublicationStatusType",
  "FK_LearningObjectiveContentStandardAuthor_LearningObjectiveContentStandard",
  "FK_LearningObjectiveLearningStandard_LearningObjective",
  "FK_LearningObjectiveLearningStandard_LearningStandard",
  "FK_LearningStandard_AcademicSubjectDescriptor",
  "FK_LearningStandard_LearningStandard",
  "FK_LearningStandardContentStandard_EducationOrganization",
  "FK_LearningStandardContentStandard_LearningStandard",
  "FK_LearningStandardContentStandard_PublicationStatusType",
  "FK_LearningStandardContentStandardAuthor_LearningStandardContentStandard",
  "FK_LearningStandardGradeLevel_GradeLevelDescriptor",
  "FK_LearningStandardGradeLevel_LearningStandard",
  "FK_LearningStandardIdentificationCode_LearningStandard",
  "FK_LearningStandardPrerequisiteLearningStandard_LearningStandard",
  "FK_LearningStandardPrerequisiteLearningStandard_LearningStandard1",
  "FK_LeaveEvent_LeaveEventCategoryType",
  "FK_LeaveEvent_Staff",
  "FK_LevelDescriptor_Descriptor",
  "FK_LevelDescriptorGradeLevel_GradeLevelDescriptor",
  "FK_LevelDescriptorGradeLevel_LevelDescriptor",
  "FK_LevelOfEducationDescriptor_Descriptor",
  "FK_LevelOfEducationDescriptor_LevelOfEducationType",
  "FK_LimitedEnglishProficiencyDescriptor_Descriptor",
  "FK_LimitedEnglishProficiencyDescriptor_LimitedEnglishProficiencyType",
  "FK_LocalEducationAgency_CharterStatusType",
  "FK_LocalEducationAgency_EducationOrganization",
  "FK_LocalEducationAgency_EducationServiceCenter",
  "FK_LocalEducationAgency_LocalEducationAgency",
  "FK_LocalEducationAgency_LocalEducationAgencyCategoryType",
  "FK_LocalEducationAgency_StateEducationAgency",
  "FK_LocalEducationAgencyAccountability_GunFreeSchoolsActReportingStatusType",
  "FK_LocalEducationAgencyAccountability_LocalEducationAgency",
  "FK_LocalEducationAgencyAccountability_SchoolChoiceImplementStatusType",
  "FK_LocalEducationAgencyAccountability_SchoolYearType",
  "FK_LocalEducationAgencyFederalFunds_LocalEducationAgency",
  "FK_Location_School",
  "FK_ObjectiveAssessment_Assessment",
  "FK_ObjectiveAssessment_ObjectiveAssessment",
  "FK_ObjectiveAssessmentAssessmentItem_AssessmentItem",
  "FK_ObjectiveAssessmentAssessmentItem_ObjectiveAssessment",
  "FK_ObjectiveAssessmentLearningObjective_LearningObjective",
  "FK_ObjectiveAssessmentLearningObjective_ObjectiveAssessment",
  "FK_ObjectiveAssessmentLearningStandard_LearningStandard",
  "FK_ObjectiveAssessmentLearningStandard_ObjectiveAssessment",
  "FK_ObjectiveAssessmentPerformanceLevel_AssessmentReportingMethodType",
  "FK_ObjectiveAssessmentPerformanceLevel_ObjectiveAssessment",
  "FK_ObjectiveAssessmentPerformanceLevel_PerformanceLevelDescriptor",
  "FK_ObjectiveAssessmentPerformanceLevel_ResultDatatypeType",
  "FK_OpenStaffPosition_EducationOrganization",
  "FK_OpenStaffPosition_EmploymentStatusDescriptor",
  "FK_OpenStaffPosition_PostingResultType",
  "FK_OpenStaffPosition_ProgramAssignmentDescriptor",
  "FK_OpenStaffPosition_StaffClassificationDescriptor",
  "FK_OpenStaffPositionAcademicSubject_AcademicSubjectDescriptor",
  "FK_OpenStaffPositionAcademicSubject_OpenStaffPosition",
  "FK_OpenStaffPositionInstructionalGradeLevel_GradeLevelDescriptor",
  "FK_OpenStaffPositionInstructionalGradeLevel_OpenStaffPosition",
  "FK_Parent_SexType",
  "FK_ParentAddress_AddressType",
  "FK_ParentAddress_Parent",
  "FK_ParentAddress_StateAbbreviationType",
  "FK_ParentElectronicMail_ElectronicMailType",
  "FK_ParentElectronicMail_Parent",
  "FK_ParentIdentificationDocument_CountryDescriptor",
  "FK_ParentIdentificationDocument_IdentificationDocumentUseType",
  "FK_ParentIdentificationDocument_Parent",
  "FK_ParentIdentificationDocument_PersonalInformationVerificationType",
  "FK_ParentInternationalAddress_AddressType",
  "FK_ParentInternationalAddress_CountryDescriptor",
  "FK_ParentInternationalAddress_Parent",
  "FK_ParentOtherName_OtherNameType",
  "FK_ParentOtherName_Parent",
  "FK_ParentTelephone_Parent",
  "FK_ParentTelephone_TelephoneNumberType",
  "FK_Payroll_Account",
  "FK_Payroll_Staff",
  "FK_PerformanceLevelDescriptor_Descriptor",
  "FK_PerformanceLevelDescriptor_PerformanceBaseConversionType",
  "FK_PostSecondaryEvent_PostSecondaryEventCategoryType",
  "FK_PostSecondaryEvent_Student",
  "FK_PostSecondaryEventPostSecondaryInstitution_AdministrativeFundingControlDescriptor",
  "FK_PostSecondaryEventPostSecondaryInstitution_PostSecondaryEvent",
  "FK_PostSecondaryEventPostSecondaryInstitution_PostSecondaryInstitutionLevelType",
  "FK_PostSecondaryEventPostSecondaryInstitutionIdentificationCode_EducationOrganizationIdentificationSystemDescriptor",
  "FK_PostSecondaryEventPostSecondaryInstitutionIdentificationCode_PostSecondaryEventPostSecondaryInstitution",
  "FK_PostSecondaryEventPostSecondaryInstitutionMediumOfInstruction_MediumOfInstructionType",
  "FK_PostSecondaryEventPostSecondaryInstitutionMediumOfInstruction_PostSecondaryEventPostSecondaryInstitution",
  "FK_Program_EducationOrganization",
  "FK_Program_ProgramSponsorType",
  "FK_Program_ProgramType",
  "FK_ProgramAssignmentDescriptor_Descriptor",
  "FK_ProgramAssignmentDescriptor_ProgramAssignmentType",
  "FK_ProgramCharacteristic_Program",
  "FK_ProgramCharacteristic_ProgramCharacteristicDescriptor",
  "FK_ProgramCharacteristicDescriptor_Descriptor",
  "FK_ProgramCharacteristicDescriptor_ProgramCharacteristicType",
  "FK_ProgramLearningObjective_LearningObjective",
  "FK_ProgramLearningObjective_Program",
  "FK_ProgramLearningStandard_LearningStandard",
  "FK_ProgramLearningStandard_Program",
  "FK_ProgramService_Program",
  "FK_ProgramService_ServiceDescriptor",
  "FK_ReasonExitedDescriptor_Descriptor",
  "FK_ReasonExitedDescriptor_ReasonExitedType",
  "FK_ReportCard_EducationOrganization",
  "FK_ReportCard_GradingPeriod",
  "FK_ReportCard_Student",
  "FK_ReportCardGrade_Grade",
  "FK_ReportCardGrade_ReportCard",
  "FK_ReportCardStudentCompetencyObjective_ReportCard",
  "FK_ReportCardStudentCompetencyObjective_StudentCompetencyObjective",
  "FK_ReportCardStudentLearningObjective_ReportCard",
  "FK_ReportCardStudentLearningObjective_StudentLearningObjective",
  "FK_ReporterDescriptionDescriptor_Descriptor",
  "FK_ReporterDescriptionDescriptor_ReporterDescriptionType",
  "FK_ResidencyStatusDescriptor_Descriptor",
  "FK_ResidencyStatusDescriptor_ResidencyStatusType",
  "FK_ResponsibilityDescriptor_Descriptor",
  "FK_ResponsibilityDescriptor_ResponsibilityType",
  "FK_RestraintEvent_EducationalEnvironmentType",
  "FK_RestraintEvent_School",
  "FK_RestraintEvent_Student",
  "FK_RestraintEventProgram_Program",
  "FK_RestraintEventProgram_RestraintEvent",
  "FK_RestraintEventReason_RestraintEvent",
  "FK_RestraintEventReason_RestraintEventReasonType",
  "FK_School_AdministrativeFundingControlDescriptor",
  "FK_School_CharterApprovalAgencyType",
  "FK_School_CharterStatusType",
  "FK_School_EducationOrganization",
  "FK_School_InternetAccessType",
  "FK_School_LocalEducationAgency",
  "FK_School_MagnetSpecialProgramEmphasisSchoolType",
  "FK_School_SchoolType",
  "FK_School_SchoolYearType",
  "FK_School_TitleIPartASchoolDesignationType",
  "FK_SchoolCategory_School",
  "FK_SchoolCategory_SchoolCategoryType",
  "FK_SchoolFoodServicesEligibilityDescriptor_Descriptor",
  "FK_SchoolFoodServicesEligibilityDescriptor_SchoolFoodServicesEligibilityType",
  "FK_SchoolGradeLevel_GradeLevelDescriptor",
  "FK_SchoolGradeLevel_School",
  "FK_Section_ClassPeriod",
  "FK_Section_CourseOffering",
  "FK_Section_CreditType",
  "FK_Section_EducationalEnvironmentType",
  "FK_Section_LanguageDescriptor",
  "FK_Section_Location",
  "FK_Section_MediumOfInstructionType",
  "FK_Section_PopulationServedType",
  "FK_Section_School",
  "FK_SectionAttendanceTakenEvent_CalendarDate",
  "FK_SectionAttendanceTakenEvent_Section",
  "FK_SectionAttendanceTakenEvent_Staff",
  "FK_SectionCharacteristic_Section",
  "FK_SectionCharacteristic_SectionCharacteristicDescriptor",
  "FK_SectionCharacteristicDescriptor_Descriptor",
  "FK_SectionCharacteristicDescriptor_SectionCharacteristicType",
  "FK_SectionProgram_Program",
  "FK_SectionProgram_Section",
  "FK_SeparationReasonDescriptor_Descriptor",
  "FK_SeparationReasonDescriptor_SeparationReasonType",
  "FK_ServiceDescriptor_Descriptor",
  "FK_Session_School",
  "FK_Session_SchoolYearType",
  "FK_Session_TermDescriptor",
  "FK_SessionAcademicWeek_AcademicWeek",
  "FK_SessionAcademicWeek_Session",
  "FK_SessionGradingPeriod_GradingPeriod",
  "FK_SessionGradingPeriod_Session",
  "FK_SpecialEducationSettingDescriptor_Descriptor",
  "FK_SpecialEducationSettingDescriptor_SpecialEducationSettingType",
  "FK_Staff_CitizenshipStatusType",
  "FK_Staff_LevelOfEducationDescriptor",
  "FK_Staff_OldEthnicityType",
  "FK_Staff_SexType",
  "FK_StaffAddress_AddressType",
  "FK_StaffAddress_Staff",
  "FK_StaffAddress_StateAbbreviationType",
  "FK_StaffClassificationDescriptor_Descriptor",
  "FK_StaffClassificationDescriptor_StaffClassificationType",
  "FK_StaffCohortAssociation_Cohort",
  "FK_StaffCohortAssociation_Staff",
  "FK_StaffCredential_CredentialFieldDescriptor",
  "FK_StaffCredential_CredentialType",
  "FK_StaffCredential_LevelDescriptor",
  "FK_StaffCredential_Staff",
  "FK_StaffCredential_StateAbbreviationType",
  "FK_StaffCredential_TeachingCredentialBasisType",
  "FK_StaffCredential_TeachingCredentialDescriptor",
  "FK_StaffEducationOrganizationAssignmentAssociation_EducationOrganization",
  "FK_StaffEducationOrganizationAssignmentAssociation_Staff",
  "FK_StaffEducationOrganizationAssignmentAssociation_StaffClassificationDescriptor",
  "FK_StaffEducationOrganizationAssignmentAssociation_StaffEducationOrganizationEmploymentAssociation",
  "FK_StaffEducationOrganizationEmploymentAssociation_EducationOrganization",
  "FK_StaffEducationOrganizationEmploymentAssociation_EmploymentStatusDescriptor",
  "FK_StaffEducationOrganizationEmploymentAssociation_SeparationReasonDescriptor",
  "FK_StaffEducationOrganizationEmploymentAssociation_SeparationType",
  "FK_StaffEducationOrganizationEmploymentAssociation_Staff",
  "FK_StaffElectronicMail_ElectronicMailType",
  "FK_StaffElectronicMail_Staff",
  "FK_StaffIdentificationCode_Staff",
  "FK_StaffIdentificationCode_StaffIdentificationSystemDescriptor",
  "FK_StaffIdentificationDocument_CountryDescriptor",
  "FK_StaffIdentificationDocument_IdentificationDocumentUseType",
  "FK_StaffIdentificationDocument_PersonalInformationVerificationType",
  "FK_StaffIdentificationDocument_Staff",
  "FK_StaffIdentificationSystemDescriptor_Descriptor",
  "FK_StaffIdentificationSystemDescriptor_StaffIdentificationSystemType",
  "FK_StaffInternationalAddress_AddressType",
  "FK_StaffInternationalAddress_CountryDescriptor",
  "FK_StaffInternationalAddress_Staff",
  "FK_StaffLanguage_LanguageDescriptor",
  "FK_StaffLanguage_Staff",
  "FK_StaffLanguageUse_LanguageUseType",
  "FK_StaffLanguageUse_StaffLanguage",
  "FK_StaffOtherName_OtherNameType",
  "FK_StaffOtherName_Staff",
  "FK_StaffProgramAssociation_Program",
  "FK_StaffProgramAssociation_Staff",
  "FK_StaffRace_RaceType",
  "FK_StaffRace_Staff",
  "FK_StaffSchoolAssociation_ProgramAssignmentDescriptor",
  "FK_StaffSchoolAssociation_School",
  "FK_StaffSchoolAssociation_SchoolYearType",
  "FK_StaffSchoolAssociation_Staff",
  "FK_StaffSchoolAssociationAcademicSubject_AcademicSubjectDescriptor",
  "FK_StaffSchoolAssociationAcademicSubject_StaffSchoolAssociation",
  "FK_StaffSchoolAssociationGradeLevel_GradeLevelDescriptor",
  "FK_StaffSchoolAssociationGradeLevel_StaffSchoolAssociation",
  "FK_StaffSectionAssociation_ClassroomPositionDescriptor",
  "FK_StaffSectionAssociation_Section",
  "FK_StaffSectionAssociation_Staff",
  "FK_StaffTelephone_Staff",
  "FK_StaffTelephone_TelephoneNumberType",
  "FK_StaffVisa_Staff",
  "FK_StaffVisa_VisaType",
  "FK_StateEducationAgency_EducationOrganization",
  "FK_StateEducationAgencyAccountability_SchoolYearType",
  "FK_StateEducationAgencyAccountability_StateEducationAgency",
  "FK_StateEducationAgencyFederalFunds_StateEducationAgency",
  "FK_Student_CitizenshipStatusType",
  "FK_Student_CountryDescriptor",
  "FK_Student_LimitedEnglishProficiencyDescriptor",
  "FK_Student_OldEthnicityType",
  "FK_Student_SchoolFoodServicesEligibilityDescriptor",
  "FK_Student_SexType",
  "FK_Student_StateAbbreviationType",
  "FK_StudentAcademicRecord_CreditType",
  "FK_StudentAcademicRecord_CreditType1",
  "FK_StudentAcademicRecord_CreditType2",
  "FK_StudentAcademicRecord_CreditType3",
  "FK_StudentAcademicRecord_EducationOrganization",
  "FK_StudentAcademicRecord_SchoolYearType",
  "FK_StudentAcademicRecord_Student",
  "FK_StudentAcademicRecord_TermDescriptor",
  "FK_StudentAcademicRecordAcademicHonor_AcademicHonorCategoryType",
  "FK_StudentAcademicRecordAcademicHonor_AchievementCategoryDescriptor",
  "FK_StudentAcademicRecordAcademicHonor_StudentAcademicRecord",
  "FK_StudentAcademicRecordClassRanking_StudentAcademicRecord",
  "FK_StudentAcademicRecordDiploma_AchievementCategoryDescriptor",
  "FK_StudentAcademicRecordDiploma_DiplomaLevelType",
  "FK_StudentAcademicRecordDiploma_DiplomaType",
  "FK_StudentAcademicRecordDiploma_StudentAcademicRecord",
  "FK_StudentAcademicRecordRecognition_AchievementCategoryDescriptor",
  "FK_StudentAcademicRecordRecognition_RecognitionType",
  "FK_StudentAcademicRecordRecognition_StudentAcademicRecord",
  "FK_StudentAcademicRecordReportCard_ReportCard",
  "FK_StudentAcademicRecordReportCard_StudentAcademicRecord",
  "FK_StudentAddress_AddressType",
  "FK_StudentAddress_StateAbbreviationType",
  "FK_StudentAddress_Student",
  "FK_StudentAssessment_AdministrationEnvironmentType",
  "FK_StudentAssessment_Assessment",
  "FK_StudentAssessment_EventCircumstanceType",
  "FK_StudentAssessment_GradeLevelDescriptor",
  "FK_StudentAssessment_LanguageDescriptor",
  "FK_StudentAssessment_ReasonNotTestedType",
  "FK_StudentAssessment_RetestIndicatorType",
  "FK_StudentAssessment_Student",
  "FK_StudentAssessmentAccommodation_AccommodationDescriptor",
  "FK_StudentAssessmentAccommodation_StudentAssessment",
  "FK_StudentAssessmentItem_AssessmentItem",
  "FK_StudentAssessmentItem_AssessmentItemResultType",
  "FK_StudentAssessmentItem_ResponseIndicatorType",
  "FK_StudentAssessmentItem_StudentAssessment",
  "FK_StudentAssessmentPerformanceLevel_PerformanceLevelDescriptor",
  "FK_StudentAssessmentPerformanceLevel_StudentAssessment",
  "FK_StudentAssessmentScoreResult_AssessmentReportingMethodType",
  "FK_StudentAssessmentScoreResult_ResultDatatypeType",
  "FK_StudentAssessmentScoreResult_StudentAssessment",
  "FK_StudentAssessmentStudentObjectiveAssessment_ObjectiveAssessment",
  "FK_StudentAssessmentStudentObjectiveAssessment_StudentAssessment",
  "FK_StudentAssessmentStudentObjectiveAssessmentPerformanceLevel_PerformanceLevelDescriptor",
  "FK_StudentAssessmentStudentObjectiveAssessmentPerformanceLevel_StudentAssessmentStudentObjectiveAssessment",
  "FK_StudentAssessmentStudentObjectiveAssessmentScoreResult_AssessmentReportingMethodType",
  "FK_StudentAssessmentStudentObjectiveAssessmentScoreResult_ResultDatatypeType",
  "FK_StudentAssessmentStudentObjectiveAssessmentScoreResult_StudentAssessmentStudentObjectiveAssessment",
  "FK_StudentCharacteristic_Student",
  "FK_StudentCharacteristic_StudentCharacteristicDescriptor",
  "FK_StudentCharacteristicDescriptor_Descriptor",
  "FK_StudentCharacteristicDescriptor_StudentCharacteristicType",
  "FK_StudentCohortAssociation_Cohort",
  "FK_StudentCohortAssociation_Student",
  "FK_StudentCohortAssociationSection_Section",
  "FK_StudentCohortAssociationSection_StudentCohortAssociation",
  "FK_StudentCohortYear_CohortYearType",
  "FK_StudentCohortYear_SchoolYearType",
  "FK_StudentCohortYear_Student",
  "FK_StudentCompetencyObjective_CompetencyLevelDescriptor",
  "FK_StudentCompetencyObjective_CompetencyObjective",
  "FK_StudentCompetencyObjective_GradingPeriod",
  "FK_StudentCompetencyObjective_Student",
  "FK_StudentCompetencyObjective_StudentProgramAssociation",
  "FK_StudentCompetencyObjective_StudentSectionAssociation",
  "FK_StudentCTEProgramAssociation_StudentProgramAssociation",
  "FK_StudentCTEProgramAssociationCTEProgram_CareerPathwayType",
  "FK_StudentCTEProgramAssociationCTEProgram_StudentCTEProgramAssociation",
  "FK_StudentDisability_DisabilityDescriptor",
  "FK_StudentDisability_DisabilityDeterminationSourceType",
  "FK_StudentDisability_Student",
  "FK_StudentDisciplineIncidentAssociation_DisciplineIncident",
  "FK_StudentDisciplineIncidentAssociation_Student",
  "FK_StudentDisciplineIncidentAssociation_StudentParticipationCodeType",
  "FK_StudentDisciplineIncidentAssociationBehavior_BehaviorDescriptor",
  "FK_StudentDisciplineIncidentAssociationBehavior_StudentDisciplineIncidentAssociation",
  "FK_StudentEducationOrganizationAssociation_EducationOrganization",
  "FK_StudentEducationOrganizationAssociation_ResponsibilityDescriptor",
  "FK_StudentEducationOrganizationAssociation_Student",
  "FK_StudentElectronicMail_ElectronicMailType",
  "FK_StudentElectronicMail_Student",
  "FK_StudentGradebookEntry_CompetencyLevelDescriptor",
  "FK_StudentGradebookEntry_GradebookEntry",
  "FK_StudentGradebookEntry_StudentSectionAssociation",
  "FK_StudentIdentificationCode_Student",
  "FK_StudentIdentificationCode_StudentIdentificationSystemDescriptor",
  "FK_StudentIdentificationDocument_CountryDescriptor",
  "FK_StudentIdentificationDocument_IdentificationDocumentUseType",
  "FK_StudentIdentificationDocument_PersonalInformationVerificationType",
  "FK_StudentIdentificationDocument_Student",
  "FK_StudentIdentificationSystemDescriptor_Descriptor",
  "FK_StudentIdentificationSystemDescriptor_StudentIdentificationSystemType",
  "FK_StudentIndicator_Student",
  "FK_StudentInternationalAddress_AddressType",
  "FK_StudentInternationalAddress_CountryDescriptor",
  "FK_StudentInternationalAddress_Student",
  "FK_StudentInterventionAssociation_Cohort",
  "FK_StudentInterventionAssociation_Intervention",
  "FK_StudentInterventionAssociation_Student",
  "FK_StudentInterventionAssociationInterventionEffectiveness_DiagnosisDescriptor",
  "FK_StudentInterventionAssociationInterventionEffectiveness_GradeLevelDescriptor",
  "FK_StudentInterventionAssociationInterventionEffectiveness_InterventionEffectivenessRatingType",
  "FK_StudentInterventionAssociationInterventionEffectiveness_PopulationServedType",
  "FK_StudentInterventionAssociationInterventionEffectiveness_StudentInterventionAssociation",
  "FK_StudentInterventionAttendanceEvent_AttendanceEventCategoryDescriptor",
  "FK_StudentInterventionAttendanceEvent_EducationalEnvironmentType",
  "FK_StudentInterventionAttendanceEvent_Intervention",
  "FK_StudentInterventionAttendanceEvent_Student",
  "FK_StudentLanguage_LanguageDescriptor",
  "FK_StudentLanguage_Student",
  "FK_StudentLanguageUse_LanguageUseType",
  "FK_StudentLanguageUse_StudentLanguage",
  "FK_StudentLearningObjective_CompetencyLevelDescriptor",
  "FK_StudentLearningObjective_GradingPeriod",
  "FK_StudentLearningObjective_LearningObjective",
  "FK_StudentLearningObjective_Student",
  "FK_StudentLearningObjective_StudentProgramAssociation",
  "FK_StudentLearningObjective_StudentSectionAssociation",
  "FK_StudentLearningStyle_Student",
  "FK_StudentMigrantEducationProgramAssociation_ContinuationOfServicesReasonDescriptor",
  "FK_StudentMigrantEducationProgramAssociation_StudentProgramAssociation",
  "FK_StudentOtherName_OtherNameType",
  "FK_StudentOtherName_Student",
  "FK_StudentParentAssociation_Parent",
  "FK_StudentParentAssociation_RelationType",
  "FK_StudentParentAssociation_Student",
  "FK_StudentProgramAssociation_EducationOrganization",
  "FK_StudentProgramAssociation_Program",
  "FK_StudentProgramAssociation_ReasonExitedDescriptor",
  "FK_StudentProgramAssociation_Student",
  "FK_StudentProgramAssociationService_ServiceDescriptor",
  "FK_StudentProgramAssociationService_StudentProgramAssociation",
  "FK_StudentProgramAttendanceEvent_AttendanceEventCategoryDescriptor",
  "FK_StudentProgramAttendanceEvent_EducationalEnvironmentType",
  "FK_StudentProgramAttendanceEvent_EducationOrganization",
  "FK_StudentProgramAttendanceEvent_Program",
  "FK_StudentProgramAttendanceEvent_Student",
  "FK_StudentProgramParticipation_ProgramType",
  "FK_StudentProgramParticipation_Student",
  "FK_StudentProgramParticipationProgramCharacteristic_ProgramCharacteristicDescriptor",
  "FK_StudentProgramParticipationProgramCharacteristic_StudentProgramParticipation",
  "FK_StudentRace_RaceType",
  "FK_StudentRace_Student",
  "FK_StudentSchoolAssociation_EntryGradeLevelReasonType",
  "FK_StudentSchoolAssociation_EntryTypeDescriptor",
  "FK_StudentSchoolAssociation_ExitWithdrawTypeDescriptor",
  "FK_StudentSchoolAssociation_GradeLevelDescriptor",
  "FK_StudentSchoolAssociation_GraduationPlan",
  "FK_StudentSchoolAssociation_ResidencyStatusDescriptor",
  "FK_StudentSchoolAssociation_School",
  "FK_StudentSchoolAssociation_SchoolYearType",
  "FK_StudentSchoolAssociation_SchoolYearType1",
  "FK_StudentSchoolAssociation_Student",
  "FK_StudentSchoolAssociationEducationPlan_EducationPlanType",
  "FK_StudentSchoolAssociationEducationPlan_StudentSchoolAssociation",
  "FK_StudentSchoolAttendanceEvent_AttendanceEventCategoryDescriptor",
  "FK_StudentSchoolAttendanceEvent_EducationalEnvironmentType",
  "FK_StudentSchoolAttendanceEvent_School",
  "FK_StudentSchoolAttendanceEvent_Session",
  "FK_StudentSchoolAttendanceEvent_Student",
  "FK_StudentSectionAssociation_RepeatIdentifierType",
  "FK_StudentSectionAssociation_Section",
  "FK_StudentSectionAssociation_Student",
  "FK_StudentSectionAttendanceEvent_AttendanceEventCategoryDescriptor",
  "FK_StudentSectionAttendanceEvent_EducationalEnvironmentType",
  "FK_StudentSectionAttendanceEvent_Section",
  "FK_StudentSectionAttendanceEvent_Student",
  "FK_StudentSpecialEducationProgramAssociation_SpecialEducationSettingDescriptor",
  "FK_StudentSpecialEducationProgramAssociation_StudentProgramAssociation",
  "FK_StudentSpecialEducationProgramAssociationServiceProvider_Staff",
  "FK_StudentSpecialEducationProgramAssociationServiceProvider_StudentSpecialEducationProgramAssociation",
  "FK_StudentTelephone_Student",
  "FK_StudentTelephone_TelephoneNumberType",
  "FK_StudentTitleIPartAProgramAssociation_StudentProgramAssociation",
  "FK_StudentTitleIPartAProgramAssociation_TitleIPartAParticipantType",
  "FK_StudentVisa_Student",
  "FK_StudentVisa_VisaType",
  "FK_TeachingCredentialDescriptor_Descriptor",
  "FK_TeachingCredentialDescriptor_TeachingCredentialType",
  "FK_TermDescriptor_Descriptor",
  "FK_TermDescriptor_TermType",
  "FK_WeaponDescriptor_Descriptor",
  "FK_WeaponDescriptor_WeaponType",
]
`;

exports[`when generating ods and comparing it to data standard 2.0 authoritative artifacts should have correct row order 1`] = `
Array [
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicHonorCategoryType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AcademicSubjectType",
  "AccommodationType",
  "AccommodationType",
  "AccommodationType",
  "AccommodationType",
  "AccommodationType",
  "AccommodationType",
  "AccommodationType",
  "AccommodationType",
  "AccommodationType",
  "AchievementCategoryType",
  "AchievementCategoryType",
  "AchievementCategoryType",
  "AchievementCategoryType",
  "AchievementCategoryType",
  "AchievementCategoryType",
  "AchievementCategoryType",
  "AchievementCategoryType",
  "AchievementCategoryType",
  "AchievementCategoryType",
  "AchievementCategoryType",
  "AchievementCategoryType",
  "AdditionalCreditType",
  "AdditionalCreditType",
  "AdditionalCreditType",
  "AdditionalCreditType",
  "AdditionalCreditType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AddressType",
  "AdministrationEnvironmentType",
  "AdministrationEnvironmentType",
  "AdministrationEnvironmentType",
  "AdministrativeFundingControlType",
  "AdministrativeFundingControlType",
  "AdministrativeFundingControlType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentCategoryType",
  "AssessmentIdentificationSystemType",
  "AssessmentIdentificationSystemType",
  "AssessmentIdentificationSystemType",
  "AssessmentIdentificationSystemType",
  "AssessmentIdentificationSystemType",
  "AssessmentIdentificationSystemType",
  "AssessmentIdentificationSystemType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemCategoryType",
  "AssessmentItemResultType",
  "AssessmentItemResultType",
  "AssessmentItemResultType",
  "AssessmentItemResultType",
  "AssessmentItemResultType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AssessmentReportingMethodType",
  "AttendanceEventCategoryType",
  "AttendanceEventCategoryType",
  "AttendanceEventCategoryType",
  "AttendanceEventCategoryType",
  "AttendanceEventCategoryType",
  "BehaviorType",
  "BehaviorType",
  "BehaviorType",
  "BehaviorType",
  "CalendarEventType",
  "CalendarEventType",
  "CalendarEventType",
  "CalendarEventType",
  "CalendarEventType",
  "CalendarEventType",
  "CalendarEventType",
  "CalendarEventType",
  "CalendarEventType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CareerPathwayType",
  "CharterApprovalAgencyType",
  "CharterApprovalAgencyType",
  "CharterApprovalAgencyType",
  "CharterApprovalAgencyType",
  "CharterStatusType",
  "CharterStatusType",
  "CharterStatusType",
  "CharterStatusType",
  "CitizenshipStatusType",
  "CitizenshipStatusType",
  "CitizenshipStatusType",
  "CitizenshipStatusType",
  "CitizenshipStatusType",
  "ClassroomPositionType",
  "ClassroomPositionType",
  "ClassroomPositionType",
  "ClassroomPositionType",
  "CohortScopeType",
  "CohortScopeType",
  "CohortScopeType",
  "CohortScopeType",
  "CohortScopeType",
  "CohortScopeType",
  "CohortScopeType",
  "CohortScopeType",
  "CohortScopeType",
  "CohortType",
  "CohortType",
  "CohortType",
  "CohortType",
  "CohortType",
  "CohortType",
  "CohortType",
  "CohortType",
  "CohortType",
  "CohortType",
  "CohortType",
  "CohortYearType",
  "CohortYearType",
  "CohortYearType",
  "CohortYearType",
  "CohortYearType",
  "CohortYearType",
  "CohortYearType",
  "CohortYearType",
  "CohortYearType",
  "CohortYearType",
  "CohortYearType",
  "CohortYearType",
  "ContentClassType",
  "ContentClassType",
  "ContentClassType",
  "ContentClassType",
  "ContentClassType",
  "ContinuationOfServicesReasonType",
  "ContinuationOfServicesReasonType",
  "ContinuationOfServicesReasonType",
  "CostRateType",
  "CostRateType",
  "CourseAttemptResultType",
  "CourseAttemptResultType",
  "CourseAttemptResultType",
  "CourseAttemptResultType",
  "CourseDefinedByType",
  "CourseDefinedByType",
  "CourseDefinedByType",
  "CourseDefinedByType",
  "CourseGPAApplicabilityType",
  "CourseGPAApplicabilityType",
  "CourseGPAApplicabilityType",
  "CourseIdentificationSystemType",
  "CourseIdentificationSystemType",
  "CourseIdentificationSystemType",
  "CourseIdentificationSystemType",
  "CourseIdentificationSystemType",
  "CourseIdentificationSystemType",
  "CourseIdentificationSystemType",
  "CourseIdentificationSystemType",
  "CourseIdentificationSystemType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseLevelCharacteristicType",
  "CourseRepeatCodeType",
  "CourseRepeatCodeType",
  "CourseRepeatCodeType",
  "CourseRepeatCodeType",
  "CourseRepeatCodeType",
  "CourseRepeatCodeType",
  "CredentialType",
  "CredentialType",
  "CredentialType",
  "CredentialType",
  "CredentialType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CreditType",
  "CurriculumUsedType",
  "CurriculumUsedType",
  "CurriculumUsedType",
  "CurriculumUsedType",
  "CurriculumUsedType",
  "CurriculumUsedType",
  "CurriculumUsedType",
  "CurriculumUsedType",
  "CurriculumUsedType",
  "DeliveryMethodType",
  "DeliveryMethodType",
  "DeliveryMethodType",
  "DeliveryMethodType",
  "DiagnosisType",
  "DiagnosisType",
  "DiplomaLevelType",
  "DiplomaLevelType",
  "DiplomaLevelType",
  "DiplomaLevelType",
  "DiplomaLevelType",
  "DiplomaLevelType",
  "DiplomaLevelType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DiplomaType",
  "DisabilityCategoryType",
  "DisabilityCategoryType",
  "DisabilityCategoryType",
  "DisabilityDeterminationSourceType",
  "DisabilityDeterminationSourceType",
  "DisabilityDeterminationSourceType",
  "DisabilityDeterminationSourceType",
  "DisabilityDeterminationSourceType",
  "DisabilityDeterminationSourceType",
  "DisabilityDeterminationSourceType",
  "DisabilityDeterminationSourceType",
  "DisabilityDeterminationSourceType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisabilityType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineType",
  "DisciplineType",
  "DisciplineType",
  "DisciplineType",
  "DisciplineType",
  "DisciplineType",
  "DisciplineType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationalEnvironmentType",
  "EducationOrganizationCategoryType",
  "EducationOrganizationCategoryType",
  "EducationOrganizationCategoryType",
  "EducationOrganizationCategoryType",
  "EducationOrganizationCategoryType",
  "EducationOrganizationCategoryType",
  "EducationOrganizationIdentificationSystemType",
  "EducationOrganizationIdentificationSystemType",
  "EducationOrganizationIdentificationSystemType",
  "EducationOrganizationIdentificationSystemType",
  "EducationOrganizationIdentificationSystemType",
  "EducationOrganizationIdentificationSystemType",
  "EducationOrganizationIdentificationSystemType",
  "EducationOrganizationIdentificationSystemType",
  "EducationOrganizationIdentificationSystemType",
  "EducationOrganizationIdentificationSystemType",
  "EducationOrganizationIdentificationSystemType",
  "EducationPlanType",
  "EducationPlanType",
  "EducationPlanType",
  "EducationPlanType",
  "EducationPlanType",
  "EducationPlanType",
  "EducationPlanType",
  "EducationPlanType",
  "EducationPlanType",
  "EducationPlanType",
  "EducationPlanType",
  "EducationPlanType",
  "ElectronicMailType",
  "ElectronicMailType",
  "ElectronicMailType",
  "ElectronicMailType",
  "EmploymentStatusType",
  "EmploymentStatusType",
  "EmploymentStatusType",
  "EmploymentStatusType",
  "EmploymentStatusType",
  "EmploymentStatusType",
  "EmploymentStatusType",
  "EmploymentStatusType",
  "EmploymentStatusType",
  "EmploymentStatusType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryGradeLevelReasonType",
  "EntryType",
  "EntryType",
  "EntryType",
  "EntryType",
  "EntryType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "EventCircumstanceType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "ExitWithdrawType",
  "GradebookEntryType",
  "GradebookEntryType",
  "GradebookEntryType",
  "GradebookEntryType",
  "GradebookEntryType",
  "GradebookEntryType",
  "GradebookEntryType",
  "GradebookEntryType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeLevelType",
  "GradeType",
  "GradeType",
  "GradeType",
  "GradeType",
  "GradeType",
  "GradeType",
  "GradeType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GradingPeriodType",
  "GraduationPlanType",
  "GraduationPlanType",
  "GraduationPlanType",
  "GraduationPlanType",
  "GraduationPlanType",
  "GunFreeSchoolsActReportingStatusType",
  "GunFreeSchoolsActReportingStatusType",
  "GunFreeSchoolsActReportingStatusType",
  "GunFreeSchoolsActReportingStatusType",
  "IdentificationDocumentUseType",
  "IdentificationDocumentUseType",
  "IdentificationDocumentUseType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "IncidentLocationType",
  "InstitutionTelephoneNumberType",
  "InstitutionTelephoneNumberType",
  "InstitutionTelephoneNumberType",
  "InstitutionTelephoneNumberType",
  "InstitutionTelephoneNumberType",
  "InstitutionTelephoneNumberType",
  "InstitutionTelephoneNumberType",
  "IntegratedTechnologyStatusType",
  "IntegratedTechnologyStatusType",
  "IntegratedTechnologyStatusType",
  "IntegratedTechnologyStatusType",
  "IntegratedTechnologyStatusType",
  "InteractivityStyleType",
  "InteractivityStyleType",
  "InteractivityStyleType",
  "InteractivityStyleType",
  "InternetAccessType",
  "InternetAccessType",
  "InternetAccessType",
  "InterventionClassType",
  "InterventionClassType",
  "InterventionClassType",
  "InterventionClassType",
  "InterventionEffectivenessRatingType",
  "InterventionEffectivenessRatingType",
  "InterventionEffectivenessRatingType",
  "InterventionEffectivenessRatingType",
  "InterventionEffectivenessRatingType",
  "InterventionEffectivenessRatingType",
  "InterventionEffectivenessRatingType",
  "LanguageType",
  "LanguageType",
  "LanguageType",
  "LanguageUseType",
  "LanguageUseType",
  "LanguageUseType",
  "LanguageUseType",
  "LanguageUseType",
  "LanguageUseType",
  "LanguageUseType",
  "LanguageUseType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LeaveEventCategoryType",
  "LevelOfEducationType",
  "LevelOfEducationType",
  "LevelOfEducationType",
  "LevelOfEducationType",
  "LevelOfEducationType",
  "LevelOfEducationType",
  "LevelOfEducationType",
  "LimitedEnglishProficiencyType",
  "LimitedEnglishProficiencyType",
  "LimitedEnglishProficiencyType",
  "LimitedEnglishProficiencyType",
  "LocalEducationAgencyCategoryType",
  "LocalEducationAgencyCategoryType",
  "MagnetSpecialProgramEmphasisSchoolType",
  "MagnetSpecialProgramEmphasisSchoolType",
  "MagnetSpecialProgramEmphasisSchoolType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MediumOfInstructionType",
  "MeetingDayType",
  "MeetingDayType",
  "MeetingDayType",
  "MeetingDayType",
  "MeetingDayType",
  "MeetingDayType",
  "MeetingDayType",
  "MethodCreditEarnedType",
  "MethodCreditEarnedType",
  "MethodCreditEarnedType",
  "MethodCreditEarnedType",
  "MethodCreditEarnedType",
  "MethodCreditEarnedType",
  "MethodCreditEarnedType",
  "MethodCreditEarnedType",
  "NetworkPurposeType",
  "NetworkPurposeType",
  "OldEthnicityType",
  "OldEthnicityType",
  "OldEthnicityType",
  "OldEthnicityType",
  "OldEthnicityType",
  "OperationalStatusType",
  "OperationalStatusType",
  "OperationalStatusType",
  "OperationalStatusType",
  "OperationalStatusType",
  "OperationalStatusType",
  "OperationalStatusType",
  "OperationalStatusType",
  "OperationalStatusType",
  "OtherNameType",
  "OtherNameType",
  "OtherNameType",
  "OtherNameType",
  "PerformanceBaseConversionType",
  "PerformanceBaseConversionType",
  "PerformanceBaseConversionType",
  "PerformanceBaseConversionType",
  "PerformanceBaseConversionType",
  "PerformanceBaseConversionType",
  "PerformanceBaseConversionType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PersonalInformationVerificationType",
  "PopulationServedType",
  "PopulationServedType",
  "PopulationServedType",
  "PopulationServedType",
  "PopulationServedType",
  "PopulationServedType",
  "PopulationServedType",
  "PopulationServedType",
  "PopulationServedType",
  "PopulationServedType",
  "PopulationServedType",
  "PostingResultType",
  "PostingResultType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryInstitutionLevelType",
  "PostSecondaryInstitutionLevelType",
  "PostSecondaryInstitutionLevelType",
  "ProgramAssignmentType",
  "ProgramAssignmentType",
  "ProgramAssignmentType",
  "ProgramAssignmentType",
  "ProgramAssignmentType",
  "ProgramAssignmentType",
  "ProgramCharacteristicType",
  "ProgramSponsorType",
  "ProgramSponsorType",
  "ProgramSponsorType",
  "ProgramSponsorType",
  "ProgramSponsorType",
  "ProgramSponsorType",
  "ProgramSponsorType",
  "ProgramSponsorType",
  "ProgramSponsorType",
  "ProgramSponsorType",
  "ProgramSponsorType",
  "ProgramSponsorType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "ProgramType",
  "PublicationStatusType",
  "PublicationStatusType",
  "PublicationStatusType",
  "PublicationStatusType",
  "PublicationStatusType",
  "RaceType",
  "RaceType",
  "RaceType",
  "RaceType",
  "RaceType",
  "RaceType",
  "RaceType",
  "ReasonExitedType",
  "ReasonExitedType",
  "ReasonExitedType",
  "ReasonExitedType",
  "ReasonExitedType",
  "ReasonExitedType",
  "ReasonExitedType",
  "ReasonExitedType",
  "ReasonExitedType",
  "ReasonExitedType",
  "ReasonExitedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "ReasonNotTestedType",
  "RecognitionType",
  "RecognitionType",
  "RecognitionType",
  "RecognitionType",
  "RecognitionType",
  "RecognitionType",
  "RecognitionType",
  "RecognitionType",
  "RecognitionType",
  "RecognitionType",
  "RecognitionType",
  "RecognitionType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RelationType",
  "RepeatIdentifierType",
  "RepeatIdentifierType",
  "RepeatIdentifierType",
  "RepeatIdentifierType",
  "RepeatIdentifierType",
  "RepeatIdentifierType",
  "RepeatIdentifierType",
  "RepeatIdentifierType",
  "ReporterDescriptionType",
  "ReporterDescriptionType",
  "ReporterDescriptionType",
  "ReporterDescriptionType",
  "ReporterDescriptionType",
  "ReporterDescriptionType",
  "ResidencyStatusType",
  "ResidencyStatusType",
  "ResidencyStatusType",
  "ResidencyStatusType",
  "ResidencyStatusType",
  "ResponseIndicatorType",
  "ResponseIndicatorType",
  "ResponseIndicatorType",
  "ResponseIndicatorType",
  "ResponsibilityType",
  "ResponsibilityType",
  "ResponsibilityType",
  "ResponsibilityType",
  "ResponsibilityType",
  "ResponsibilityType",
  "ResponsibilityType",
  "RestraintEventReasonType",
  "RestraintEventReasonType",
  "RestraintEventReasonType",
  "ResultDatatypeType",
  "ResultDatatypeType",
  "ResultDatatypeType",
  "ResultDatatypeType",
  "ResultDatatypeType",
  "ResultDatatypeType",
  "RetestIndicatorType",
  "RetestIndicatorType",
  "RetestIndicatorType",
  "RetestIndicatorType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolCategoryType",
  "SchoolChoiceImplementStatusType",
  "SchoolChoiceImplementStatusType",
  "SchoolChoiceImplementStatusType",
  "SchoolChoiceImplementStatusType",
  "SchoolFoodServicesEligibilityType",
  "SchoolFoodServicesEligibilityType",
  "SchoolFoodServicesEligibilityType",
  "SchoolFoodServicesEligibilityType",
  "SchoolType",
  "SchoolType",
  "SchoolType",
  "SchoolType",
  "SectionCharacteristicType",
  "SectionCharacteristicType",
  "SeparationReasonType",
  "SeparationReasonType",
  "SeparationReasonType",
  "SeparationReasonType",
  "SeparationReasonType",
  "SeparationReasonType",
  "SeparationReasonType",
  "SeparationReasonType",
  "SeparationReasonType",
  "SeparationReasonType",
  "SeparationReasonType",
  "SeparationType",
  "SeparationType",
  "SeparationType",
  "SeparationType",
  "SexType",
  "SexType",
  "SexType",
  "SpecialEducationSettingType",
  "SpecialEducationSettingType",
  "SpecialEducationSettingType",
  "SpecialEducationSettingType",
  "SpecialEducationSettingType",
  "SpecialEducationSettingType",
  "SpecialEducationSettingType",
  "SpecialEducationSettingType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffClassificationType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StaffIdentificationSystemType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StateAbbreviationType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentCharacteristicType",
  "StudentIdentificationSystemType",
  "StudentIdentificationSystemType",
  "StudentIdentificationSystemType",
  "StudentIdentificationSystemType",
  "StudentIdentificationSystemType",
  "StudentIdentificationSystemType",
  "StudentIdentificationSystemType",
  "StudentIdentificationSystemType",
  "StudentIdentificationSystemType",
  "StudentIdentificationSystemType",
  "StudentIdentificationSystemType",
  "StudentParticipationCodeType",
  "StudentParticipationCodeType",
  "StudentParticipationCodeType",
  "StudentParticipationCodeType",
  "TeachingCredentialBasisType",
  "TeachingCredentialBasisType",
  "TeachingCredentialBasisType",
  "TeachingCredentialBasisType",
  "TeachingCredentialBasisType",
  "TeachingCredentialBasisType",
  "TeachingCredentialBasisType",
  "TeachingCredentialBasisType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TeachingCredentialType",
  "TelephoneNumberType",
  "TelephoneNumberType",
  "TelephoneNumberType",
  "TelephoneNumberType",
  "TelephoneNumberType",
  "TelephoneNumberType",
  "TelephoneNumberType",
  "TelephoneNumberType",
  "TermType",
  "TermType",
  "TermType",
  "TermType",
  "TermType",
  "TermType",
  "TitleIPartAParticipantType",
  "TitleIPartAParticipantType",
  "TitleIPartAParticipantType",
  "TitleIPartAParticipantType",
  "TitleIPartAParticipantType",
  "TitleIPartASchoolDesignationType",
  "TitleIPartASchoolDesignationType",
  "TitleIPartASchoolDesignationType",
  "TitleIPartASchoolDesignationType",
  "TitleIPartASchoolDesignationType",
  "TitleIPartASchoolDesignationType",
  "TitleIPartASchoolDesignationType",
  "VisaType",
  "VisaType",
  "VisaType",
  "VisaType",
  "VisaType",
  "VisaType",
  "VisaType",
  "WeaponType",
  "WeaponType",
  "WeaponType",
  "WeaponType",
  "WeaponType",
  "WeaponType",
  "WeaponType",
  "WeaponType",
  "WeaponType",
  "WeaponType",
]
`;

exports[`when generating ods and comparing it to data standard 2.0 authoritative artifacts should have correct table order 1`] = `
Array [
  "AcademicHonorCategoryType",
  "AcademicSubjectDescriptor",
  "AcademicSubjectType",
  "AcademicWeek",
  "AccommodationDescriptor",
  "AccommodationType",
  "Account",
  "AccountabilityRating",
  "AccountCode",
  "AccountCodeDescriptor",
  "AchievementCategoryDescriptor",
  "AchievementCategoryType",
  "Actual",
  "AdditionalCreditType",
  "AddressType",
  "AdministrationEnvironmentType",
  "AdministrativeFundingControlDescriptor",
  "AdministrativeFundingControlType",
  "Assessment",
  "AssessmentCategoryDescriptor",
  "AssessmentCategoryType",
  "AssessmentContentStandard",
  "AssessmentContentStandardAuthor",
  "AssessmentFamily",
  "AssessmentFamilyAssessmentPeriod",
  "AssessmentFamilyContentStandard",
  "AssessmentFamilyContentStandardAuthor",
  "AssessmentFamilyIdentificationCode",
  "AssessmentFamilyLanguage",
  "AssessmentIdentificationCode",
  "AssessmentIdentificationSystemDescriptor",
  "AssessmentIdentificationSystemType",
  "AssessmentItem",
  "AssessmentItemCategoryType",
  "AssessmentItemLearningStandard",
  "AssessmentItemResultType",
  "AssessmentLanguage",
  "AssessmentPerformanceLevel",
  "AssessmentPeriodDescriptor",
  "AssessmentProgram",
  "AssessmentReportingMethodType",
  "AssessmentScore",
  "AssessmentSection",
  "AttendanceEventCategoryDescriptor",
  "AttendanceEventCategoryType",
  "BehaviorDescriptor",
  "BehaviorType",
  "BellSchedule",
  "BellScheduleMeetingTime",
  "Budget",
  "CalendarDate",
  "CalendarDateCalendarEvent",
  "CalendarEventDescriptor",
  "CalendarEventType",
  "CareerPathwayType",
  "CharterApprovalAgencyType",
  "CharterStatusType",
  "CitizenshipStatusType",
  "ClassPeriod",
  "ClassroomPositionDescriptor",
  "ClassroomPositionType",
  "Cohort",
  "CohortProgram",
  "CohortScopeType",
  "CohortType",
  "CohortYearType",
  "CompetencyLevelDescriptor",
  "CompetencyObjective",
  "ContentClassType",
  "ContinuationOfServicesReasonDescriptor",
  "ContinuationOfServicesReasonType",
  "ContractedStaff",
  "CostRateType",
  "CountryDescriptor",
  "Course",
  "CourseAttemptResultType",
  "CourseCompetencyLevel",
  "CourseDefinedByType",
  "CourseGPAApplicabilityType",
  "CourseIdentificationCode",
  "CourseIdentificationSystemDescriptor",
  "CourseIdentificationSystemType",
  "CourseLearningObjective",
  "CourseLearningStandard",
  "CourseLevelCharacteristic",
  "CourseLevelCharacteristicType",
  "CourseOfferedGradeLevel",
  "CourseOffering",
  "CourseOfferingCurriculumUsed",
  "CourseRepeatCodeType",
  "CourseTranscript",
  "CourseTranscriptEarnedAdditionalCredits",
  "CredentialFieldDescriptor",
  "CredentialType",
  "CreditType",
  "CurriculumUsedType",
  "DeliveryMethodType",
  "Descriptor",
  "DiagnosisDescriptor",
  "DiagnosisType",
  "DiplomaLevelType",
  "DiplomaType",
  "DisabilityCategoryType",
  "DisabilityDescriptor",
  "DisabilityDeterminationSourceType",
  "DisabilityType",
  "DisciplineAction",
  "DisciplineActionDiscipline",
  "DisciplineActionDisciplineIncident",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineActionStaff",
  "DisciplineDescriptor",
  "DisciplineIncident",
  "DisciplineIncidentBehavior",
  "DisciplineIncidentWeapon",
  "DisciplineType",
  "EducationalEnvironmentType",
  "EducationContent",
  "EducationContentAppropriateGradeLevel",
  "EducationContentAppropriateSex",
  "EducationContentAuthor",
  "EducationContentDerivativeSourceEducationContent",
  "EducationContentDerivativeSourceLearningResourceMetadataURI",
  "EducationContentDerivativeSourceURI",
  "EducationContentLanguage",
  "EducationOrganization",
  "EducationOrganizationAddress",
  "EducationOrganizationCategory",
  "EducationOrganizationCategoryType",
  "EducationOrganizationIdentificationCode",
  "EducationOrganizationIdentificationSystemDescriptor",
  "EducationOrganizationIdentificationSystemType",
  "EducationOrganizationInstitutionTelephone",
  "EducationOrganizationInternationalAddress",
  "EducationOrganizationInterventionPrescriptionAssociation",
  "EducationOrganizationNetwork",
  "EducationOrganizationNetworkAssociation",
  "EducationOrganizationPeerAssociation",
  "EducationPlanType",
  "EducationServiceCenter",
  "ElectronicMailType",
  "EmploymentStatusDescriptor",
  "EmploymentStatusType",
  "EntryGradeLevelReasonType",
  "EntryType",
  "EntryTypeDescriptor",
  "EventCircumstanceType",
  "ExitWithdrawType",
  "ExitWithdrawTypeDescriptor",
  "FeederSchoolAssociation",
  "Grade",
  "GradebookEntry",
  "GradebookEntryLearningObjective",
  "GradebookEntryLearningStandard",
  "GradebookEntryType",
  "GradeLevelDescriptor",
  "GradeLevelType",
  "GradeType",
  "GradingPeriod",
  "GradingPeriodDescriptor",
  "GradingPeriodType",
  "GraduationPlan",
  "GraduationPlanCreditsByCourse",
  "GraduationPlanCreditsByCourseCourse",
  "GraduationPlanCreditsBySubject",
  "GraduationPlanRequiredAssessment",
  "GraduationPlanRequiredAssessmentAssessmentPerformanceLevel",
  "GraduationPlanRequiredAssessmentScore",
  "GraduationPlanType",
  "GraduationPlanTypeDescriptor",
  "GunFreeSchoolsActReportingStatusType",
  "IdentificationDocumentUseType",
  "IncidentLocationType",
  "InstitutionTelephoneNumberType",
  "IntegratedTechnologyStatusType",
  "InteractivityStyleType",
  "InternetAccessType",
  "Intervention",
  "InterventionAppropriateGradeLevel",
  "InterventionAppropriateSex",
  "InterventionClassType",
  "InterventionDiagnosis",
  "InterventionEducationContent",
  "InterventionEffectivenessRatingType",
  "InterventionInterventionPrescription",
  "InterventionLearningResourceMetadataURI",
  "InterventionMeetingTime",
  "InterventionPopulationServed",
  "InterventionPrescription",
  "InterventionPrescriptionAppropriateGradeLevel",
  "InterventionPrescriptionAppropriateSex",
  "InterventionPrescriptionDiagnosis",
  "InterventionPrescriptionEducationContent",
  "InterventionPrescriptionLearningResourceMetadataURI",
  "InterventionPrescriptionPopulationServed",
  "InterventionPrescriptionURI",
  "InterventionStaff",
  "InterventionStudy",
  "InterventionStudyAppropriateGradeLevel",
  "InterventionStudyAppropriateSex",
  "InterventionStudyEducationContent",
  "InterventionStudyInterventionEffectiveness",
  "InterventionStudyLearningResourceMetadataURI",
  "InterventionStudyPopulationServed",
  "InterventionStudyStateAbbreviation",
  "InterventionStudyURI",
  "InterventionURI",
  "LanguageDescriptor",
  "LanguageType",
  "LanguageUseType",
  "LearningObjective",
  "LearningObjectiveContentStandard",
  "LearningObjectiveContentStandardAuthor",
  "LearningObjectiveLearningStandard",
  "LearningStandard",
  "LearningStandardContentStandard",
  "LearningStandardContentStandardAuthor",
  "LearningStandardGradeLevel",
  "LearningStandardIdentificationCode",
  "LearningStandardPrerequisiteLearningStandard",
  "LeaveEvent",
  "LeaveEventCategoryType",
  "LevelDescriptor",
  "LevelDescriptorGradeLevel",
  "LevelOfEducationDescriptor",
  "LevelOfEducationType",
  "LimitedEnglishProficiencyDescriptor",
  "LimitedEnglishProficiencyType",
  "LocalEducationAgency",
  "LocalEducationAgencyAccountability",
  "LocalEducationAgencyCategoryType",
  "LocalEducationAgencyFederalFunds",
  "Location",
  "MagnetSpecialProgramEmphasisSchoolType",
  "MediumOfInstructionType",
  "MeetingDayType",
  "MethodCreditEarnedType",
  "NetworkPurposeType",
  "ObjectiveAssessment",
  "ObjectiveAssessmentAssessmentItem",
  "ObjectiveAssessmentLearningObjective",
  "ObjectiveAssessmentLearningStandard",
  "ObjectiveAssessmentPerformanceLevel",
  "OldEthnicityType",
  "OpenStaffPosition",
  "OpenStaffPositionAcademicSubject",
  "OpenStaffPositionInstructionalGradeLevel",
  "OperationalStatusType",
  "OtherNameType",
  "Parent",
  "ParentAddress",
  "ParentElectronicMail",
  "ParentIdentificationDocument",
  "ParentInternationalAddress",
  "ParentOtherName",
  "ParentTelephone",
  "Payroll",
  "PerformanceBaseConversionType",
  "PerformanceLevelDescriptor",
  "PersonalInformationVerificationType",
  "PopulationServedType",
  "PostingResultType",
  "PostSecondaryEvent",
  "PostSecondaryEventCategoryType",
  "PostSecondaryEventPostSecondaryInstitution",
  "PostSecondaryEventPostSecondaryInstitutionIdentificationCode",
  "PostSecondaryEventPostSecondaryInstitutionMediumOfInstruction",
  "PostSecondaryInstitutionLevelType",
  "Program",
  "ProgramAssignmentDescriptor",
  "ProgramAssignmentType",
  "ProgramCharacteristic",
  "ProgramCharacteristicDescriptor",
  "ProgramCharacteristicType",
  "ProgramLearningObjective",
  "ProgramLearningStandard",
  "ProgramService",
  "ProgramSponsorType",
  "ProgramType",
  "PublicationStatusType",
  "RaceType",
  "ReasonExitedDescriptor",
  "ReasonExitedType",
  "ReasonNotTestedType",
  "RecognitionType",
  "RelationType",
  "RepeatIdentifierType",
  "ReportCard",
  "ReportCardGrade",
  "ReportCardStudentCompetencyObjective",
  "ReportCardStudentLearningObjective",
  "ReporterDescriptionDescriptor",
  "ReporterDescriptionType",
  "ResidencyStatusDescriptor",
  "ResidencyStatusType",
  "ResponseIndicatorType",
  "ResponsibilityDescriptor",
  "ResponsibilityType",
  "RestraintEvent",
  "RestraintEventProgram",
  "RestraintEventReason",
  "RestraintEventReasonType",
  "ResultDatatypeType",
  "RetestIndicatorType",
  "School",
  "SchoolCategory",
  "SchoolCategoryType",
  "SchoolChoiceImplementStatusType",
  "SchoolFoodServicesEligibilityDescriptor",
  "SchoolFoodServicesEligibilityType",
  "SchoolGradeLevel",
  "SchoolType",
  "SchoolYearType",
  "Section",
  "SectionAttendanceTakenEvent",
  "SectionCharacteristic",
  "SectionCharacteristicDescriptor",
  "SectionCharacteristicType",
  "SectionProgram",
  "SeparationReasonDescriptor",
  "SeparationReasonType",
  "SeparationType",
  "ServiceDescriptor",
  "Session",
  "SessionAcademicWeek",
  "SessionGradingPeriod",
  "SexType",
  "SpecialEducationSettingDescriptor",
  "SpecialEducationSettingType",
  "Staff",
  "StaffAddress",
  "StaffClassificationDescriptor",
  "StaffClassificationType",
  "StaffCohortAssociation",
  "StaffCredential",
  "StaffEducationOrganizationAssignmentAssociation",
  "StaffEducationOrganizationEmploymentAssociation",
  "StaffElectronicMail",
  "StaffIdentificationCode",
  "StaffIdentificationDocument",
  "StaffIdentificationSystemDescriptor",
  "StaffIdentificationSystemType",
  "StaffInternationalAddress",
  "StaffLanguage",
  "StaffLanguageUse",
  "StaffOtherName",
  "StaffProgramAssociation",
  "StaffRace",
  "StaffSchoolAssociation",
  "StaffSchoolAssociationAcademicSubject",
  "StaffSchoolAssociationGradeLevel",
  "StaffSectionAssociation",
  "StaffTelephone",
  "StaffVisa",
  "StateAbbreviationType",
  "StateEducationAgency",
  "StateEducationAgencyAccountability",
  "StateEducationAgencyFederalFunds",
  "Student",
  "StudentAcademicRecord",
  "StudentAcademicRecordAcademicHonor",
  "StudentAcademicRecordClassRanking",
  "StudentAcademicRecordDiploma",
  "StudentAcademicRecordRecognition",
  "StudentAcademicRecordReportCard",
  "StudentAddress",
  "StudentAssessment",
  "StudentAssessmentAccommodation",
  "StudentAssessmentItem",
  "StudentAssessmentPerformanceLevel",
  "StudentAssessmentScoreResult",
  "StudentAssessmentStudentObjectiveAssessment",
  "StudentAssessmentStudentObjectiveAssessmentPerformanceLevel",
  "StudentAssessmentStudentObjectiveAssessmentScoreResult",
  "StudentCharacteristic",
  "StudentCharacteristicDescriptor",
  "StudentCharacteristicType",
  "StudentCohortAssociation",
  "StudentCohortAssociationSection",
  "StudentCohortYear",
  "StudentCompetencyObjective",
  "StudentCTEProgramAssociation",
  "StudentCTEProgramAssociationCTEProgram",
  "StudentDisability",
  "StudentDisciplineIncidentAssociation",
  "StudentDisciplineIncidentAssociationBehavior",
  "StudentEducationOrganizationAssociation",
  "StudentElectronicMail",
  "StudentGradebookEntry",
  "StudentIdentificationCode",
  "StudentIdentificationDocument",
  "StudentIdentificationSystemDescriptor",
  "StudentIdentificationSystemType",
  "StudentIndicator",
  "StudentInternationalAddress",
  "StudentInterventionAssociation",
  "StudentInterventionAssociationInterventionEffectiveness",
  "StudentInterventionAttendanceEvent",
  "StudentLanguage",
  "StudentLanguageUse",
  "StudentLearningObjective",
  "StudentLearningStyle",
  "StudentMigrantEducationProgramAssociation",
  "StudentOtherName",
  "StudentParentAssociation",
  "StudentParticipationCodeType",
  "StudentProgramAssociation",
  "StudentProgramAssociationService",
  "StudentProgramAttendanceEvent",
  "StudentProgramParticipation",
  "StudentProgramParticipationProgramCharacteristic",
  "StudentRace",
  "StudentSchoolAssociation",
  "StudentSchoolAssociationEducationPlan",
  "StudentSchoolAttendanceEvent",
  "StudentSectionAssociation",
  "StudentSectionAttendanceEvent",
  "StudentSpecialEducationProgramAssociation",
  "StudentSpecialEducationProgramAssociationServiceProvider",
  "StudentTelephone",
  "StudentTitleIPartAProgramAssociation",
  "StudentVisa",
  "TeachingCredentialBasisType",
  "TeachingCredentialDescriptor",
  "TeachingCredentialType",
  "TelephoneNumberType",
  "TermDescriptor",
  "TermType",
  "TitleIPartAParticipantType",
  "TitleIPartASchoolDesignationType",
  "VisaType",
  "WeaponDescriptor",
  "WeaponType",
]
`;

exports[`when generating ods and comparing it to data standard 2.0 authoritative artifacts should have correct trigger order 1`] = `
Array [
  "AcademicWeek_TR_DeleteEvent",
  "Account_TR_DeleteEvent",
  "AccountabilityRating_TR_DeleteEvent",
  "Actual_TR_DeleteEvent",
  "Assessment_TR_DeleteEvent",
  "AssessmentFamily_TR_DeleteEvent",
  "AssessmentItem_TR_DeleteEvent",
  "BellSchedule_TR_DeleteEvent",
  "Budget_TR_DeleteEvent",
  "CalendarDate_TR_DeleteEvent",
  "ClassPeriod_TR_DeleteEvent",
  "Cohort_TR_DeleteEvent",
  "CompetencyObjective_TR_DeleteEvent",
  "ContractedStaff_TR_DeleteEvent",
  "Course_TR_DeleteEvent",
  "CourseOffering_TR_DeleteEvent",
  "CourseTranscript_TR_DeleteEvent",
  "DisciplineAction_TR_DeleteEvent",
  "DisciplineIncident_TR_DeleteEvent",
  "EducationContent_TR_DeleteEvent",
  "EducationOrganization_TR_DeleteEvent",
  "EducationOrganizationInterventionPrescriptionAssociation_TR_DeleteEvent",
  "EducationOrganizationNetwork_TR_DeleteEvent",
  "EducationOrganizationNetworkAssociation_TR_DeleteEvent",
  "EducationOrganizationPeerAssociation_TR_DeleteEvent",
  "EducationServiceCenter_TR_DeleteEvent",
  "FeederSchoolAssociation_TR_DeleteEvent",
  "Grade_TR_DeleteEvent",
  "GradebookEntry_TR_DeleteEvent",
  "GradingPeriod_TR_DeleteEvent",
  "GraduationPlan_TR_DeleteEvent",
  "Intervention_TR_DeleteEvent",
  "InterventionPrescription_TR_DeleteEvent",
  "InterventionStudy_TR_DeleteEvent",
  "LearningObjective_TR_DeleteEvent",
  "LearningStandard_TR_DeleteEvent",
  "LeaveEvent_TR_DeleteEvent",
  "LocalEducationAgency_TR_DeleteEvent",
  "Location_TR_DeleteEvent",
  "ObjectiveAssessment_TR_DeleteEvent",
  "OpenStaffPosition_TR_DeleteEvent",
  "Parent_TR_DeleteEvent",
  "Payroll_TR_DeleteEvent",
  "PostSecondaryEvent_TR_DeleteEvent",
  "Program_TR_DeleteEvent",
  "ReportCard_TR_DeleteEvent",
  "RestraintEvent_TR_DeleteEvent",
  "School_TR_DeleteEvent",
  "Section_TR_DeleteEvent",
  "SectionAttendanceTakenEvent_TR_DeleteEvent",
  "Session_TR_DeleteEvent",
  "Staff_TR_DeleteEvent",
  "StaffCohortAssociation_TR_DeleteEvent",
  "StaffEducationOrganizationAssignmentAssociation_TR_DeleteEvent",
  "StaffEducationOrganizationEmploymentAssociation_TR_DeleteEvent",
  "StaffProgramAssociation_TR_DeleteEvent",
  "StaffSchoolAssociation_TR_DeleteEvent",
  "StaffSectionAssociation_TR_DeleteEvent",
  "StateEducationAgency_TR_DeleteEvent",
  "Student_TR_DeleteEvent",
  "StudentAcademicRecord_TR_DeleteEvent",
  "StudentAssessment_TR_DeleteEvent",
  "StudentCohortAssociation_TR_DeleteEvent",
  "StudentCompetencyObjective_TR_DeleteEvent",
  "StudentCTEProgramAssociation_TR_DeleteEvent",
  "StudentDisciplineIncidentAssociation_TR_DeleteEvent",
  "StudentEducationOrganizationAssociation_TR_DeleteEvent",
  "StudentGradebookEntry_TR_DeleteEvent",
  "StudentInterventionAssociation_TR_DeleteEvent",
  "StudentInterventionAttendanceEvent_TR_DeleteEvent",
  "StudentLearningObjective_TR_DeleteEvent",
  "StudentMigrantEducationProgramAssociation_TR_DeleteEvent",
  "StudentParentAssociation_TR_DeleteEvent",
  "StudentProgramAssociation_TR_DeleteEvent",
  "StudentProgramAttendanceEvent_TR_DeleteEvent",
  "StudentSchoolAssociation_TR_DeleteEvent",
  "StudentSchoolAttendanceEvent_TR_DeleteEvent",
  "StudentSectionAssociation_TR_DeleteEvent",
  "StudentSectionAttendanceEvent_TR_DeleteEvent",
  "StudentSpecialEducationProgramAssociation_TR_DeleteEvent",
  "StudentTitleIPartAProgramAssociation_TR_DeleteEvent",
]
`;
